fixed stylings for blog roll, enabled dark mode

--- a/src/components/CustomBlogPostItem.module.css
+++ b/src/components/CustomBlogPostItem.module.css
@@ -3,10 +3,9 @@
     flex-direction: column;
     align-items: center;
   }
-  
   .blogPostImage {
     width: 100%;
-    max-width: 250px;
+    max-width: 300px;
     max-height: 250px;
     height: auto;
     object-fit: cover;
