--- a/src/theme/BlogListPage/styles.module.css
+++ b/src/theme/BlogListPage/styles.module.css
@@ -3,7 +3,10 @@
     flex-direction: column;
     align-items: center;
   }
-  
+  .blogContainer h1{
+    text-align: center;
+    margin: 50px 0;
+  }
   .blogPosts {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
